Allow downloads again from extension views

Now that downloads initially look like navigations, we have to allow
some navigations from extension views such as popups

BUG=821219,823639
R=clamy@chromium.org,rdevlin.cronin@chromium.org

Cq-Include-Trybots: master.tryserver.chromium.linux:linux_mojo
Change-Id: I2276a5649120a17974bf576791f74e3eac3d4e3a
Reviewed-on: https://chromium-review.googlesource.com/960003
Commit-Queue: Jochen Eisinger <jochen@chromium.org>
Reviewed-by: Charlie Reis <creis@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544324}
Former-commit-id: 71fdb27d0bf6f3493ee68b2236ff624320fad7e7